ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement2/input.ts.stderr
error: Unexpected token `E`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement2/input.ts:4:8
  |
4 |   enum E {
  |        ^

